<resources>
    <string name="app_name">OAU_Portal</string>
    <string name="welcome" >Welcome</string>
    <string name="welcome2" >Welcome to</string>
    <string name="school_name">Obafemi Awolowo University, Ile-Ife.</string>
    <string name="portal_text">PORTAL</string>
    <string name="ePortal_home_tag">EPORTAL HOME</string>
    <string name="ePortal_home">Click Here To Continue To OAU Eportal Home Page</string>
    <string name="ePortal_access_tag">IMPORTANT INFORMATION ON E-PORTAL ACCESS</string>
    <string name="ePortal_access">As part of the ongoing scheduled maintenance of the
        University e-portal, you may be requested to change your password to a new one.
        Kindly follow the instructions given. Continue to access the e-portal with your new
        password. Wishing you a happy session..</string>
    <string name="resumption_tag">RESUMPTION FOR 2019/2020 ACADEMIC SESSION</string>
    <string name="resumption">Click Here To Download Information for 2019/2020 Academic Session
    </string>
    <string name="accommodation_tag">2019/2020 ACCOMMODATION</string>
    <string name="accommodation">Bed space request for Final Year Students will commence on
    Friday, 28th February, 2020 by 7.00pm
     To Continue</string>
    <string name="enquiries_tag">ENQUIRIES</string>

    <string name="enquiries">All enquiries or problems will be addressed via the following online channels:
    E-mail:- enquiry@oauife.edu.ng</string>
    <string name="footer">© 2016-2020. Obafemi Awolowo University.</string>
    <string name="click">Click Here</string>
    <string name="action_settings">Settings</string>
    <string name="action_news">News</string>

</resources>
